routes/simple/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: route-example
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: route-example-certs
  labels:
    app: route-example
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: https
      protocol: TCP
      port: 8443
      targetPort: https
  selector:
    app: route-example
  type: ClusterIP
