routes/simple/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-example
  labels:
    app: route-example
spec:
  to:
    kind: Service
    name: route-example
    weight: 100
  port:
    targetPort: http
